--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,9 @@
 
 <h1>semi supervised naive bayes</h1>
 <h3><a href="intro.html">what is a semi supervised algorithm?</a></h3>
-<h3>code available at <a href="http://github.com/matpalm/semi">github.com/matpalm/median</a></h3>
+<h3><a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a></h3>
+<h3><a href="real_data_example.html">an example over real data</a></h3>
+<h3>code available at <a href="http://github.com/matpalm/semisupervised_naive_bayes">github</a></h3>
 <h3><a href="..">other projects</a></h3>
 </body>
 </html>
