--- a/site/index.html
+++ b/site/index.html
@@ -9,9 +9,20 @@
 <h1>semi supervised naive bayes</h1>
 <h3><a href="intro.html">what is a semi supervised algorithm?</a></h3>
 <h3><a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a></h3>
-<h3><a href="real_data_example.html">an example over real data</a></h3>
+<h3><a href="does_it_do_any_better.html">does it do any better?</a></h3>
 <h3>code available at <a href="http://github.com/matpalm/semisupervised_naive_bayes">github</a></h3>
 <h3><a href="..">other projects</a></h3>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-10409220-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 </body>
 </html>
 
