--- a/site/intro.html
+++ b/site/intro.html
@@ -67,8 +67,18 @@ it is worth trying to use the entire corpus though since it might contain some i
 </p>
 
 <p>
-now let's have a look at <a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a>
+let's have a look at <a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a>
 </p>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-10409220-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </body>
 </html>
