work on version using only rationals, not going very well due to insane precision like 1/1e200

--- a/site/semi_supervised_bayes.html
+++ b/site/semi_supervised_bayes.html
@@ -70,7 +70,7 @@ for example; to classify for the above example of 'movie on fashion' we first bu
 <tbody>
 <tr><td>read</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td>ignore</td><td>2</td><td></td><td></td><td>1</td><td>1</td><td>1</td><td>1</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>read</td>  <td>3</td><td></td><td></td><td></td><td></td><td></td><td></td><td>1</td><td>1</td><td>1</td><td></td><td></td></tr>
+<tr><td>read</td>  <td>3</td><td></td>1<td></td><td></td><td></td><td></td><td></td><td>1</td><td>1</td><td>1</td><td></td><td></td></tr>
 <tr><td>ignore</td><td>4</td><td></td><td></td><td></td><td></td><td>1</td><td></td><td>1</td><td></td><td></td><td>1</td><td>1</td></tr>
 </tbody>
 </table>
