more updates on site

--- a/site/semi_supervised_bayes.html
+++ b/site/semi_supervised_bayes.html
@@ -19,7 +19,7 @@
 
 <p>
 let's pretend we want to classify the new rss articles we receive each day to decide if we want to bother reading them.
-in a normal naive bayes system, which i've discussed in <a href="rss.feed/p3/">a previous article</a>, we'd train a classifier with some pre collected articles that we have taken the time to label as either to-read or to-ignore.</br>
+in a normal naive bayes system, which i've discussed in <a href="/rss.feed/p3/">a previous article</a>, we'd train a classifier with some pre collected articles that we have taken the time to label as either to-read or to-ignore.</br>
 </p>
 
 <p>
@@ -228,8 +228,8 @@ and given new values we can now <em>reclassify</em> documents 5 and 6 using a cl
 <tbody>
 <tr><td>1</td><td>0</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
 <tr><td>0</td><td>1</td><td>2</td><td> </td><td> </td><td>1</td><td>1</td><td>1</td><td>1</td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
-<tr><td>1</td><td>0</td><td>3</td><td> </td><td>1</td><td> </td><td> </td><td> </td><td> </td><td>1</td><td>1</td><td>1</td><td>1</td><td> </td><td> </td><td> </td></tr>
-<tr><td>0</td><td>1</td><td>4</td><td> </td><td> </td><td> </td><td> </td><td>1</td><td> </td><td>1</td><td> </td><td> </td><td> </td><td>1</td><td> </td><td> </td></tr>
+<tr><td>1</td><td>0</td><td>3</td><td> </td><td>1</td><td> </td><td> </td><td> </td><td> </td><td>1</td><td>1</td><td>1</td><td> </td><td> </td><td> </td><td> </td></tr>
+<tr><td>0</td><td>1</td><td>4</td><td> </td><td> </td><td> </td><td> </td><td>1</td><td> </td><td>1</td><td> </td><td> </td><td>1</td><td>1</td><td> </td><td> </td></tr>
 <tr><td>0.75</td><td>0.25</td><td>5</td><td> </td><td>1</td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td>1</td><td> </td></tr>
 <tr><td>0.25</td><td>0.75</td><td>6</td><td> </td><td> </td><td> </td><td> </td><td>1</td><td> </td><td> </td><td> </td><td> </td><td> </td><td> </td><td>1</td><td>1</td></tr>
 </tbody>
