project pages for rewrite

--- a/site/does_it_do_any_better.html
+++ b/site/does_it_do_any_better.html
@@ -10,6 +10,7 @@
 <p>
 <a href="semi_supervised_bayes.html">&lt;&lt;&nbsp;&nbsp;semi supervised naive bayes</a>&nbsp;&nbsp;&nbsp;
 <a href="index.html">index</a>&nbsp;&nbsp;&nbsp;
+<a href="rewriting_for_scale.html">v2: rewriting for scale&nbsp;&nbsp;&gt;&gt;</a>
 </p>
 
 <h1>but does it do any better?</h1>
@@ -58,7 +59,11 @@ in general, seems semi supervised works pretty well!
 </p>
 
 <p>
-all the code is on <a href="http://github.com/matpalm/semisupervised_naive_bayes">github</a> and feel free to check out <a href="http://matpalm.com">other stuff i've done</a>
+trouble is my clumsy implementation doesn't scale so we <a href="rewriting_for_scale.html">need to change it</a> 
+</p>
+
+<p>
+<small>february two thousand and ten</small>
 </p>
 
 <script type="text/javascript">
