--- a/site/intro.html
+++ b/site/intro.html
@@ -70,6 +70,10 @@ it is worth trying to use the entire corpus though since it might contain some i
 let's have a look at <a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a>
 </p>
 
+<p>
+<small>february two thousand and ten</small>
+</p>
+
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
