--- a/site/rewriting_for_scale.html
+++ b/site/rewriting_for_scale.html
@@ -8,12 +8,12 @@
 <body>
 
 <p>
-<a href="intro.html">&lt;&lt;&nbsp;&nbsp;semi supervised algorithms</a>&nbsp;&nbsp;&nbsp;
+<a href="does_it_do_any_better.html">&lt;&lt;&nbsp;&nbsp;does it do any better?</a>&nbsp;&nbsp;&nbsp;
 <a href="index.html">index</a>&nbsp;&nbsp;&nbsp;
-<a href="does_it_do_any_better.html">does it do any better?&nbsp;&nbsp;&gt;&gt;</a>
+COMING SOON: how does v2 go?
 </p>
 
-<h1>revisiting the smoothing technique</h1>
+<h1>v2: rewriting for scale</h1>
 
 <h2>problems with the last approach</h2>
 
@@ -368,9 +368,17 @@ but now it's only just 'read', the additional content from doc 6 (fashion) has b
 
 </pre>
 </p>
-<p>
 
-TOTOOTOTO so this semi supervised algorithm looks promising on paper but the real question is <a href="does_it_do_any_better_v2.html">does it do any better</a> on real data?
+<p>
+so i'm still implementing this one, should be done in a week or two :)
+</p>
+
+<p>
+in the mean time all the code is on <a href="http://github.com/matpalm/semisupervised_naive_bayes">github</a> and feel free to check out <a href="http://matpalm.com">other stuff i've done</a>
+</p>
+
+<p>
+<small>march two thousand and ten</small>
 </p>
 
 </body>
