--- a/site/semi_supervised_bayes.html
+++ b/site/semi_supervised_bayes.html
@@ -13,7 +13,7 @@
 <a href="does_it_do_any_better.html">does it do any better?&nbsp;&nbsp;&gt;&gt;</a>
 </p>
 
-<h1>semi supervised naive bayes</h1>
+<h1>v1: semi supervised naive bayes</h1>
 
 <h2>example using normal naive bayes</h2>
 
@@ -336,6 +336,11 @@ we can see now how the inclusion of 'fashion', as related to 'hollywood' through
 <p>
 so this semi supervised algorithm looks promising on paper but the real question is <a href="does_it_do_any_better.html">does it do any better</a> on real data?
 </p>
+
+<p>
+<small>february two thousand and ten</small>
+</p>
+
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
