--- a/site/index.html
+++ b/site/index.html
@@ -8,10 +8,15 @@
 
 <h1>semi supervised naive bayes</h1>
 <h3><a href="intro.html">what is a semi supervised algorithm?</a></h3>
-<h3><a href="semi_supervised_bayes.html">a semi supervised version of naive bayes</a></h3>
+<h3><a href="semi_supervised_bayes.html">v1: a semi supervised version of naive bayes</a></h3>
 <h3><a href="does_it_do_any_better.html">does it do any better?</a></h3>
+<h3><a href="rewriting_for_scale.html">v2: rewriting for scale</a></h3>
 <h3>code available at <a href="http://github.com/matpalm/semisupervised_naive_bayes">github</a></h3>
 <h3><a href="..">other projects</a></h3>
+
+<p>
+<small>march two thousand and ten</small>
+</p>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
